--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,75 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
+        "ext-zip": "*",
+        "ext-zlib": "*",
+        "24slides/laravel-saml2": "^2.3",
+        "aws/aws-sdk-php": "~3.0",
+        "bacon/bacon-qr-code": "^2.0",
+        "barryvdh/laravel-snappy": "^0.4.0",
+        "bugsnag/bugsnag-laravel": "^2.0",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.2",
+        "h4cc/wkhtmltoimage-amd64": "0.12.x",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
+        "iio/libmergepdf": "^3.1",
+        "imgix/imgix-php": "^2.1",
+        "intervention/image": "^2.3",
+        "jenssegers/agent": "^2.6",
+        "kalnoy/nestedset": "^4.3",
+        "laravel/cashier": "^9.0.1",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
+        "laravel/helpers": "^1.0",
+        "laravel/horizon": "^2.0",
+        "laravel/passport": "~7.0",
+        "laravel/scout": "~4.0",
+        "laravel/socialite": "^3.0",
+        "laravel/tinker": "~1.0",
+        "lcobucci/jwt": "3.3.3",
+        "league/flysystem-aws-s3-v3": "~1.0",
+        "maatwebsite/excel": "^3.1",
+        "mailgun/mailgun-php": "^3.2",
+        "mews/purifier": "^2.1",
+        "monarobase/country-list": "*",
+        "morrislaptop/laravel-queue-clear": "^1.1",
+        "mpociot/vat-calculator": "^2.0",
+        "nothingworks/blade-svg": "^0.2.2",
+        "nyholm/psr7": "^1.4",
+        "ohmybrew/basic-shopify-api": "5.3",
+        "orchestra/parser": "~3.6",
+        "pragmarx/google2fa": "^8.0",
+        "pragmarx/google2fa-laravel": "^2.1",
+        "predis/predis": "^1.1",
+        "prettus/l5-repository": "^2.6",
+        "pusher/pusher-php-server": "^3.0",
+        "ramsey/uuid": "^3.9",
+        "reinink/advanced-eloquent": "^0.2.0",
+        "spatie/laravel-activitylog": "^3.6.1",
+        "spatie/laravel-binary-uuid": "*",
+        "spatie/laravel-db-snapshots": "^1.2",
+        "spatie/laravel-query-builder": "^1.10",
+        "spatie/laravel-tags": "~2.2.2",
+        "symfony/http-client": "^5.4",
+        "symfony/intl": "^5.4",
+        "symfony/process": "^4.1",
+        "zanysoft/laravel-zip": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "barryvdh/laravel-ide-helper": "^2.4",
+        "filp/whoops": "~2.0",
+        "fzaninotto/faker": "~1.4",
+        "infyomlabs/laravel-generator": "5.8.x-dev",
+        "mockery/mockery": "~1.0",
+        "nunomaduro/collision": "~3.0",
+        "phpunit/phpunit": "~7.0",
+        "symfony/css-selector": "~4.0",
+        "symfony/dom-crawler": "~4.0",
+        "symfony/thanks": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
