--- a/composer.json
+++ b/composer.json
@@ -29,13 +29,12 @@
         "kalnoy/nestedset": "^4.3",
         "laravel/cashier": "^9.0.1",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
         "laravel/helpers": "^1.0",
         "laravel/horizon": "^2.0",
         "laravel/passport": "~7.0",
         "laravel/scout": "~4.0",
         "laravel/socialite": "^3.0",
-        "laravel/tinker": "~1.0",
         "lcobucci/jwt": "3.3.3",
         "league/flysystem-aws-s3-v3": "~1.0",
         "maatwebsite/excel": "^3.1",
@@ -74,7 +73,6 @@
         "infyomlabs/laravel-generator": "5.8.x-dev",
         "mockery/mockery": "~1.0",
         "nunomaduro/collision": "~3.0",
-        "phpunit/phpunit": "~7.0",
         "symfony/css-selector": "~4.0",
         "symfony/dom-crawler": "~4.0",
         "symfony/thanks": "^1.0"
